--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "bapbap-competitive-site",
   "version": "1.0.0",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+  "dev": "vite",
+  "build": "vite build --debug",
+  "preview": "vite preview"
+  }
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.0.0",
